forms-flow-forms/infra/test/deployment_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-flow-forms
  namespace : forms-flow-forms
  labels:
    app.kubernetes.io/name: forms
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: forms
  template:
    metadata:
      labels:
        app.kubernetes.io/name: forms
    spec:
      imagePullSecrets:
        - name: private-registry
      containers:
        - name: form-flow-forms
          image: formsflow/forms-flow-forms:v5.1.0
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo '140.82.121.4 github.com ' >> /etc/hosts && echo '140.82.121.9 codeload.github.com' >> /etc/hosts" ]
          stdin: true 
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          tty: true 
          ports:
            - containerPort: 3001
              name: http
              protocol: TCP
          env:
            - name: DEBUG
              value: "*"
            - name: FORMIO_DB_USERNAME
              value: "formsiotest"
            - name: FORMIO_DB_PASSWORD
              value: "formsiotest123"
            - name: FORMIO_DB_DATABASE
              value: "formsiodbtest"
            - name: ROOT_EMAIL
              value: "admin@example.com"
            - name: ROOT_PASSWORD
              value: "changeme"
            - name: FORMIO_CLIENT_UI
              value: "false" 
            - name: FORMIO_DOMAIN
              value: "http://form-flow-forms-test:8080"
            - name: FORMIO_JWT_SECRET
              value: "test-secret"
            - name: FORMIO_JWT_EXPIRE
              value: "240"
            - name: MULTI_TENANCY_ENABLED
              value: "false"
            - name: NODE_CONFIG
              value: "{\"mongo\":\"mongodb://formsiotest:formsiotest123@192.168.201.46:27017/formsiodbtest\"}"
